--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 <p>This is a new paragraph (button) </p>
 <p>This is a new paragraph (dropdown)</p>
 <p>This is feature1</p>
+<p>This is a signin</p>
 <br>
